--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ $text-color:       #111;
 $background-color: #fff1e5;
 $brand-color:      #2a7ae2;
 
-$grey-color:       #fff9f5;
+$grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
