--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,10 @@
 ---
 @charset "utf-8";
 
-
+img[src*='#center'] {
+    display: block;
+    margin: auto;
+}
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
