Added mermaid support and flesh out a couple of articles

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,3 +54,8 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+.mermaid {
+    text-align: center;
+    margin: 2em 0;
+  }
