--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,16 @@
     </div>
 
     {% include footer.html %}
+
     {% include google-analytics.html %}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.11.0/mermaid.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        mermaid.initialize({ startOnLoad: true });
+      });
+    </script>
+
   </body>
 
 </html>
